style: fix onboarding overflow (#9000)

--- a/apps/helpdesk/src/AIJourney/pages/AiJourneyOnboarding/AiJourneyOnboarding.less
+++ b/apps/helpdesk/src/AIJourney/pages/AiJourneyOnboarding/AiJourneyOnboarding.less
@@ -9,6 +9,7 @@
         align-items: center;
 
         width: 100vw;
+        height: fit-content;
 
         background: linear-gradient(
             145deg,
