--- a/apps/helpdesk/src/AIJourney/pages/LandingPage/LandingPage.less
+++ b/apps/helpdesk/src/AIJourney/pages/LandingPage/LandingPage.less
@@ -60,7 +60,6 @@
         display: flex;
         justify-content: center;
         width: 100%;
-        position: fixed;
-        bottom: var(--layout-spacing-l);
+        margin-top: var(--layout-spacing-l);
     }
 }
